# InsightXpert-OpenEnv

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: schema_linking.json  tasks.json
schema_linking/: SCHEMA_LINKING.md  __init__.py  build_linking.py  db.py  models.py  perfect_linker.py  schema_extractor.py  stats_collector.py
scripts/: build_tasks.py  validate-submission.sh
server/: app.py  bird_environment.py  grader.py  gradio_app.py
