[project]
name = "bird-text2sql-env"
version = "0.1.0"
description = "BIRD Text-to-SQL OpenEnv environment for the Meta OpenEnv Challenge"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
]
dev = [
    "sqlglot>=20.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["server*", "schema_linking*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
